# doc-agent

./: .gitignore  playground.py  pyproject.toml
doc_agent/: agent.py  data_store.py  doc_parser.py  model.py  prompt_templates.py
doc_agent/data/: Grades.csv  Professors.csv  Syllabus.txt  Weekly Schedule.txt
