[tool.poetry]
name = "doc-agent"
version = "0.1.0"
description = ""
authors = ["Sahil Adhawade <sahil.adhawade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.50.2"
flask = "^3.0.3"
transformers = "^4.45.1"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
